fixed typos and font-sizes

--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
 
             <div class="card-container"><a href="https://www.youtube.com/watch?v=l3mUE6qj2Qg" class="video-link">
                     <img class="video-images" src="images/roberto-blake.png" alt="roberto-blake-img">
-                    <h3 class="video-headings">How To Build a Website Without Code | Everyone Can Build a ...</h3>
+                    <h3 class="video-headings">How To Build a Website Without Code</h3>
                 </a>
                 <p class="video-channel-name">Roberto Blake</p>
                 <p class="youtube-date">Youtube <span> - Nov 8, 2016</span></p>
@@ -205,7 +205,7 @@
         <div id="people-ask-container">
             <h3 id="people-ask-heading">People also ask</h3>
             <div class="people-ask-row">
-                <p class="people-ask-question">How can I cready my own webpage?</p>
+                <p class="people-ask-question">How can I create my own webpage?</p>
                 <img id="down-expand-icon" src="images/down-expand.svg" alt="down-arrow">
             </div>
             <div class="people-ask-row">
