add text to input, clear unnused css

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <a id="google-logo-link" href="http://google.com">
                 <img id="google-logo" src="images/google-logo.png" alt="google-logo"></a>
             <div id="search-bar-container">
-                <input type="text" name="search-input" id="search-input">
+                <input type="text" name="search-input" id="search-input" value="build this webpage">
                 <img class="search-bar-icons" id="microphone-icon"
                     src="http://www.gstatic.com/images/branding/googlemic/2x/googlemic_color_24dp.png" alt="googlemic">
                 <img class="search-bar-icons" id="search-icon" src="images/search.svg" alt="search-icon">
